examples/sample-product-chart/chart-test/fixtures/gateway-api/envoy-gateway-certificate.yaml
---
apiVersion: cert-manager.io/v1
kind: Certificate
metadata:
  name: gateway-tls
  namespace: sample
spec:
  secretName: gateway-tls
  duration: 24h
  renewBefore: 12h
  subject:
    organizations:
      - chart-test-swarm
  commonName: sample.sample.svc.cluster.local
  dnsNames:
    - sample.sample.svc.cluster.local
  issuerRef:
    name: chart-test-swarm-selfsigned
    kind: ClusterIssuer
    group: cert-manager.io
